--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -25,6 +25,7 @@
    "outputs": [],
    "source": [
     "#hide\n",
+    "from fastcore.test import *\n",
     "from nbdev.showdoc import *"
    ]
   },
@@ -33,7 +34,40 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#export\n",
+    "def say_hello(to):\n",
+    "    \"Say hello to somebody\"\n",
+    "    return f'Hello {to}!'\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'Hello nbdev!'"
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "say_hello(\"nbdev\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_eq(say_hello(\"nbdev\"), \"Hello nbdev!\")"
+   ]
   }
  ],
  "metadata": {
