--- a/index.ipynb
+++ b/index.ipynb
@@ -7,16 +7,16 @@
    "outputs": [],
    "source": [
     "#hide\n",
-    "from your_lib.core import *"
+    "from hellonbdev import *"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project name here\n",
+    "# Welecome to hello_nbdev\n",
     "\n",
-    "> Summary description here."
+    "> An introduction tutorial to nbdev"
    ]
   },
   {
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fill me in please! Don't forget code examples:"
+    "Let's see this at work:"
    ]
   },
   {
@@ -61,9 +61,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "2"
-      ]
+      "text/plain": "'Hello Sham!'"
      },
      "execution_count": null,
      "metadata": {},
@@ -71,7 +69,7 @@
     }
    ],
    "source": [
-    "1+1"
+    "say_hello(\"Sham\")"
    ]
   },
   {
