change module name

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -38,8 +38,14 @@
     "#export\n",
     "def say_hello(to):\n",
     "    \"Say hello to somebody\"\n",
-    "    return f'Hello {to}!'\n",
-    "\n"
+    "    return f'Hello {to}!'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can use this to say hello to anyone"
    ]
   },
   {
